src/components/basic-information/basic-information.scss
/* 
The basic information section 
in the Internship Section
*/

.internship-position-title {
  background-color: rgb(218, 227, 242);
  width: auto;
  margin-top: -2.5em;
  margin-right: 0.2em;
}

.position-name {
  font-size: 32px;
  font-weight: bold;
  float: left;
  color: rgb(31, 80, 140);
}

.position-company {
  font-size: 20px;
  float: right;
  margin-right: 3em;
  color: rgb(31, 80, 140);
  font-weight: bold;
  margin-top: 0.8em;
}

.internship-period-row {
  margin-top: 2px;
}

.internship-period-title {
  font-size: 19px;
  float: right;
  margin-right: 0.5em;
  font-weight: bold;
  color: rgb(2, 63, 122);
}

.internship-period {
  font-size: 16px;
  margin-top: 2.5px;

}

.internship-description-row {
  margin-top: 2px;
}

.job-description-title {
  font-size: 17px;
  float: right;
  margin-right: 1em;
  font-weight: bold;
  color: rgb(2, 63, 122);
}

.job-description {
  font-size: 15px;
}


/* 
The basic information section 
in the Research Section
*/

.prof-name {
  font-size: 36px;
  font-weight: bold;
  margin-top: -1em;
}

.prof-title {
  font-size: 22px;

}

.prof-department {
  font-size: 20px;
  margin-top: -1em;

}

.research-focus-title {
  font-size: 18px;
  text-decoration: underline;
  margin-top: 0.5em;
  margin-bottom: 0.2em;
}

.research-focus-description {
  font-size: 16px;
}


/* 
The basic information section 
in the Teaching Section
*/

.module-icon {
  font-size: 300%;
  color: rgb(253, 83, 65);
  font-weight: bold;
  border: 1px solid rgba(172, 193, 227, 90);
  text-align: center;
  vertical-align: center;
  margin-left: -20px;
  margin-top: 2px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 80px;
  padding-bottom: 80px;

}

.module-code {
  font-size: 32px;
  font-weight: bold;
  margin-top: -1em;
}

.module-name {
  font-size: 28px;
}

.module-course-mc-sem {
  font-size: 20px;
  font-style: italic;
  margin-top: -1em;
}

.module-description-title {
  font-size: 20px;
  font-weight: bold;
  margin-top: 1em;
  margin-bottom: 0.3em;
}

.module-description {
  font-size: 16px;
}

